fix for schedule button aligning

--- a/app/assets/stylesheets/public_board_fixed_headers.css.scss
+++ b/app/assets/stylesheets/public_board_fixed_headers.css.scss
@@ -1,12 +1,14 @@
 @import "./mixins/main_styles.css.scss";
 // Top Header
-#save_progress {
-  float: right;
-  margin-top: 9px;
-}
-#schedule_demo {
-  @include light-button($sky-blue);
-  float: right;
+header {
+  #save_progress {
+    float: right;
+    margin-top: 9px;
+  }
+  #schedule_demo {
+    @include light-button($sky-blue);
+    float: right;
+  }
 }
 
 .main_h {
@@ -177,6 +179,7 @@ h1 {
   }
   #save_progress {
     width: 50%;
+    margin-top: 15px;
   }
   // .main_h {
   //   padding-top: 25px;
